# ChangeLog for sci-libs/gdal
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/gdal/ChangeLog,v 1.49 2008/11/09 01:42:16 nerdboy Exp $

  09 Nov 2008; Steve Arnold <nerdboy@gentoo.org>
  +files/gdal-1.5.2-xerces-64-bit.patch, gdal-1.5.2.ebuild:
  Updated 1.5.2 for newer xerces-c interface prior to stablization
  (a patched 1.5.3 will follow shortly).

*gdal-1.5.3 (18 Oct 2008)

  18 Oct 2008; Steve Arnold <nerdboy@gentoo.org> metadata.xml,
  gdal-1.5.2.ebuild, +gdal-1.5.3.ebuild:
  Updated with latest release and fixes for the perllocal.pod thing and 
  USE flag support for libecwj2 (subject to blocking bug #230802).  The
  latter support is only in 1.5.3 so 1.5.2 should be fine (ie, with the
  existing jasper support).  Also fixed some minor QA issues in older
  versions.

  12 Oct 2008; nixnut <nixnut@gentoo.org> gdal-1.5.2.ebuild:
  Stable on ppc wrt bug 241500

  12 Oct 2008; Steve Arnold <nerdboy@gentoo.org> gdal-1.3.1.ebuild,
  gdal-1.3.2.ebuild, gdal-1.4.2.ebuild, gdal-1.5.0-r1.ebuild:
  Added die to sed invocations (although what this hs to do with perl I'm 
  not quite sure...

  07 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

*gdal-1.5.2 (05 Jul 2008)

  05 Jul 2008; Steve Arnold <nerdboy@gentoo.org> +gdal-1.5.2.ebuild:
  Updated to latest version, but no ecw or oracle support just yet (see
  bug #230802 for the blocking issue).

  21 May 2008; Tiziano Müller <dev-zero@gentoo.org> gdal-1.3.1.ebuild,
  gdal-1.3.2.ebuild, gdal-1.4.2.ebuild, gdal-1.5.0-r1.ebuild,
  gdal-1.5.1.ebuild:
  Changed dependency for postgresql from dev-db/postgresql to
  virtual/postgresql-server

*gdal-1.5.1 (20 May 2008)

  20 May 2008; Steve Arnold <nerdboy@gentoo.org>
  +files/gdal-1.5.1-max-min.patch, +files/gdal-1.5.1-python-install.patch,
  +gdal-1.5.1.ebuild:
  Added new version and updated for gcc 4.3 with contributed patches