@@ -24,6 +24,6 @@ EBUILD gdal-1.4.2.ebuild 4660 RMD160 437566fd4915ca05388e0fcd4c4ce6f63079b779 SH
 EBUILD gdal-1.5.0-r1.ebuild 6127 RMD160 3282266d87f529fc5f34874886547e0dc56528ff SHA1 ce429086a266ba00d04aa5f69a62cdd228aacf51 SHA256 c6458586043fbfd15de9b09640a6e12fa55a611dcbdf64a91922c297c3531df4
 EBUILD gdal-1.5.1.ebuild 6181 RMD160 fab38e35517ecb614fd06b25a01e6deb7f495cbd SHA1 cfb48b1ef59cb36f8d70e2d0638dfe553e641c7d SHA256 b5169d89b0f260cae069d41d36f5d69e700fcdf27b6172282458520b365f6acf
 EBUILD gdal-1.5.2.ebuild 6215 RMD160 8ed9fbc067bc5c6cc570e807f8050384346f3622 SHA1 8d6fedbefdfb3998023c535d286ebbb2f9204e33 SHA256 ad30ea56b6733e50a5d403b60c0f9a9142292eae8313abbc9804f91b60cee7ee
-EBUILD gdal-1.5.3.ebuild 6249 RMD160 47406c29487396bb8537e27e403a06b59b3a6ffe SHA1 00542405ae9b670877fa7a0376bca7d661391476 SHA256 95b31602f2d5c443b60a4f006263140a3425f3f8f64f6958ff095af70f603a31
-MISC ChangeLog 9855 RMD160 9a4966d8c16c9490b9c88fceec1a2c6319739176 SHA1 d45b8931f76a1b744f5b053f7ef5e36f255d7f21 SHA256 070d028d4d15b458ef7de1e951d48cc8a0565367f7c4f34bf7b4f8fedb39a360
-MISC metadata.xml 1095 RMD160 e9ab6c5ceb8ef386d4326eb312313103018e398a SHA1 3e8b74d446e173e748518326e5d0897a2e4e617c SHA256 df8f955ef191e8c794ca5ff540cb461365244623e373bca9c84783b92d473c07
+EBUILD gdal-1.5.3.ebuild 6296 RMD160 8a5bcc3e3b062d2785e44d8b844569d1e96acbb1 SHA1 d9c31669962aa88d99d3ff44f83edbb939f85eb4 SHA256 e9d10a5d9f718c985b6350eb2872a92d5aa5fe2ce3693a4c29951b7b77969284
+MISC ChangeLog 10136 RMD160 c935bef8d70d22f59e2f47312386242f54d9ee01 SHA1 06965f46634a4c6d28e8c3ae06298d8f1f0b38d9 SHA256 75316db464ac708f99ad2d675689640af589c4bab0bdc071d2a1033730ab9377
+MISC metadata.xml 1100 RMD160 edad0e7b25dec94f4b1f7a66ce2289da3115c9d1 SHA1 b3ad2e46e137bcd069a6867c6a5c9f6fbba00e66 SHA256 2aff971ad868d45f5d30128cfbc508e2c1eab7adb05028a95d182ec1821b15b3
